wip: make ts work

--- a/arch/arm64/boot/dts/allwinner/sun50i-a64-dontbeevil.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-a64-dontbeevil.dts
@@ -239,11 +239,13 @@
 	ft6236@38 {
 		compatible = "focaltech,ft6236", "edt,edt-6236";
 		reg = <0x38>;
-		// pinctrl-names = "default";
-		// pinctrl-0 = <&pinctrl_lcd_ctp_int>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&touch_intr_pin>;
 
 		interrupt-parent = <&pio>;
 		interrupts = <7 4 IRQ_TYPE_EDGE_FALLING>;
+		irq-gpios = <&pio 7 4 GPIO_ACTIVE_LOW>;
 
 		touchscreen-size-x = <720>;
 		touchscreen-size-y = <1440>;
@@ -251,6 +253,16 @@
 		touchscreen-inverted-x;
 	};
 };
+
+&pio {
+       touch_intr_pin: touch_intr_pin {
+               pins = "PH4";
+               // TODO: perhaps remove this bias
+               bias-pull-up;
+               function = "irq";
+       };
+};
+
 
 &i2c1 {
 	pinctrl-names = "default";
