--- a/arch/arm64/configs/msm8953_defconfig
+++ b/arch/arm64/configs/msm8953_defconfig
@@ -40,7 +40,6 @@ CONFIG_ARCH_QCOM=y
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
-CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 CONFIG_COMPAT=y
@@ -201,23 +200,20 @@ CONFIG_SPI_QUP=y
 CONFIG_SPMI=y
 CONFIG_PTP_1588_CLOCK=y
 CONFIG_PINCTRL_SINGLE=y
+CONFIG_PINCTRL_MSM=y
 CONFIG_PINCTRL_MSM8953=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_GPIO_PCA953X=m
-CONFIG_POWER_AVS=y
-CONFIG_QCOM_CPR3=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_POWER_RESET_QCOM_PON=y
 CONFIG_POWER_SUPPLY_DEBUG=y
 CONFIG_FUEL_GAUGE_SM5708=m
 CONFIG_CHARGER_SM5708=m
 CONFIG_BATTERY_QCOM_FG=m
-CONFIG_PD_PROXY=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=100
 CONFIG_CPU_THERMAL=y
-CONFIG_CLOCK_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_QCOM_TSENS=y
@@ -247,13 +243,9 @@ CONFIG_DRM_MSM=m
 # CONFIG_DRM_MSM_DSI_20NM_PHY is not set
 # CONFIG_DRM_MSM_DSI_28NM_8960_PHY is not set
 # CONFIG_DRM_MSM_DSI_10NM_PHY is not set
-CONFIG_DRM_PANEL_MIPI_DSI_GENERIC=m
 CONFIG_FB=y
 CONFIG_FB_SIMPLE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=m
-# CONFIG_BACKLIGHT_GENERIC is not set
-CONFIG_BACKLIGHT_DSI_DCS=m
-CONFIG_BACKLIGHT_DSI_DCS_S6E3FA7=m
 CONFIG_BACKLIGHT_QCOM_WLED=m
 CONFIG_BACKLIGHT_LED=m
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
@@ -325,7 +317,6 @@ CONFIG_QCOM_BAM_DMA=m
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_COMMON_CLK_QCOM=y
-CONFIG_QCOM_CLK_APCS_MSM8953=y
 CONFIG_QCOM_CLK_SMD_RPM=y
 CONFIG_MSM_GCC_8953=y
 CONFIG_HWSPINLOCK=y
@@ -405,7 +396,6 @@ CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCOM_RNG=y
-# CONFIG_CRYPTO_DEV_VIRTIO is not set
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=32
 CONFIG_FONTS=y
