--- a/arch/arm64/boot/dts/qcom/sdm632-fairphone-fp3.dts
+++ b/arch/arm64/boot/dts/qcom/sdm632-fairphone-fp3.dts
@@ -15,16 +15,16 @@
 	qcom,msm-id = <349 3>;
 	qcom,board-id = <8 0x10000>;
 
-	//aliases {
-	//	serial0 = &uart_0;
-	//};
+	aliases {
+		serial0 = &uart_0;
+	};
 
 	chosen {
 		//#address-cells = <2>;
 		//#size-cells = <2>;
 		//ranges;
 
-		//stdout-path = "serial0:115200n8";
+		stdout-path = "serial0:115200n8";
 
 		framebuffer0: framebuffer@83401000 {
 			compatible = "simple-framebuffer";
