--- a/arch/arm64/boot/dts/qcom/sdm632-fairphone-fp3.dts
+++ b/arch/arm64/boot/dts/qcom/sdm632-fairphone-fp3.dts
@@ -6,7 +6,7 @@
 
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/regulator/qcom,rpm-smd-regulator.h>
-#include "msm8953-pm8953.dtsi"
+#include "sdm632-pm8953.dtsi"
 
 / {
 	model = "Fairphone 3";
