--- a/arch/arm64/configs/fp5_defconfig
+++ b/arch/arm64/configs/fp5_defconfig
@@ -150,7 +150,6 @@ CONFIG_SERIAL_QCOM_GENI=y
 CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_HW_RANDOM=y
-# CONFIG_DEVMEM is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_QCOM_CCI=y
@@ -512,4 +511,5 @@ CONFIG_DEBUG_FS=y
 CONFIG_PANIC_TIMEOUT=10
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_FTRACE is not set
+# CONFIG_STRICT_DEVMEM is not set
 CONFIG_MEMTEST=y
